<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
    <ImageView android:layout_marginTop="20dp" 
    	android:layout_height="wrap_content" 
    	android:src="@drawable/sicsrlogo" android:contentDescription="@string/image"
    	android:id="@+id/imageLogo" android:layout_width="fill_parent"/>
    
    <ImageView 
    	android:layout_height="wrap_content" 
    	android:src="@drawable/sicsr_header" android:contentDescription="@string/image"
    	android:id="@+id/imageHeader" android:layout_width="fill_parent"/>
        
    <LinearLayout android:layout_width="match_parent"
    android:layout_height="0dp" android:layout_weight="1">

        <Button
            android:id="@+id/fileshareButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blue"
            android:textSize="28sp"
            android:textStyle="italic"
            android:text="@string/fileshare"
            android:background="@color/white"/>
        
    </LinearLayout>
	
    
    <Button android:id="@+id/changeIpButton"
			android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_ip" />
    
</LinearLayout>