<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:baselineAligned="false"
    android:divider="@drawable/ic_launcher"
    android:orientation="vertical"
    tools:context=".FileShare" >


	
    <TextView android:layout_marginLeft="0dp"
		    android:textColor="@color/white"
		    android:textSize="22sp"
		    android:text="@string/select_user"
		    android:layout_gravity="center"
		    android:gravity = "center"
		    android:background = "@color/banner"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" />
	<LinearLayout  android:orientation="horizontal"
	      	android:layout_marginTop="20dp"
	   	  	android:weightSum="2"
	      	android:layout_width="match_parent"
    	  	android:layout_height="wrap_content" >
 	
 		    <ImageButton
 		        android:id="@+id/instructorRadio"
 		        android:contentDescription="@string/teacher"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:src="@drawable/instructoricon"
 		        android:checked="true"
 		        android:layout_weight="1"
 		        android:textColor="@color/orange"
 		        android:text="@string/teacher" />

 		    <ImageButton
 		        android:id="@+id/studentRadio"
 		        android:contentDescription="@string/student"
 		        android:layout_width="wrap_content"
 		        android:src="@drawable/studenticon"
 		        android:layout_height="75dp"
 		        android:layout_weight="1"
 		        android:textColor="@color/orange"
 		        android:text="@string/student" />
 	</LinearLayout>


</LinearLayout>